# gplib

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
gplib/exceptions/: BadFileFormat.cpp  NoSuchFile.cpp
gplib/filesystem/: ZipFilesystem.cpp
includes/exceptions/: BadFileFormat.hpp  NoSuchFile.hpp
includes/filesystem/: ZipFilesystem.hpp
tests/assets/: testfile.txt
tests/filesystem/: ZipFilesystem.spec.cpp
